--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,9 @@
   color: #61dafb;
 }
 
+/* makes links easier to see */
+a { color: white; margin: 0 10px; }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
